c4prj1_deck/grade.txt
Grading at Thu Aug 30 23:53:11 UTC 2018
Compiling deck.c -> deck.o
Compiling eval.c -> eval.o
eval.c: In function ‘get_match_counts’:
eval.c:251:36: error: request for member ‘value’ in something not a structure or union
     while(c.value == hand->cards[j].value) {
                                    ^
Compilation of eval.c failed

Overall Grade: F
